--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <canvas id="investmentChart" class="hidden"></canvas>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
